- Update to AIR version 2.7. - Added NavigationView and its NavigationMediator. - QuranDisplay background image changed.

--- a/src/main/flex/org/lionart/furqan/view/components/QuranDisplayView.mxml
+++ b/src/main/flex/org/lionart/furqan/view/components/QuranDisplayView.mxml
@@ -12,7 +12,7 @@
         <s:GlowFilter id="glowFilter" color="#073567" blurX="12" blurY="12" alpha="0.8" strength="3"/>
     </fx:Declarations>
     
-    <s:BitmapImage source="{EmbeddedAssets.PAPER_BACKGROUND}" filters="{[glowFilter]}"/>
+    <s:BitmapImage source="{EmbeddedAssets.PAPER_BACKGROUND}" filters="{[glowFilter]}" horizontalCenter="0" bottom="0"/>
     
     <s:RichText id="quranContent" top="60" bottom="40" right="90" left="90"/>
     
