--- a/src/main/flex/Furqan.mxml
+++ b/src/main/flex/Furqan.mxml
@@ -42,6 +42,8 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
     
     <components:HeaderView id="headerView" top="0" right="0" left="0"/>
     
+    <components:NavigationView id="navigationView" top="30" left="10"/>
+    
     <components:QuranDisplayView id="quranView" bottom="10" horizontalCenter="0" />
 
     <fx:Style source="/../resources/themes/standard/style/style.css"/>
