--- a/src/main/flex/org/lionart/furqan/view/components/QuranDisplayView.mxml
+++ b/src/main/flex/org/lionart/furqan/view/components/QuranDisplayView.mxml
@@ -1,19 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
-         xmlns:s="library://ns.adobe.com/flex/spark" 
-         xmlns:mx="library://ns.adobe.com/flex/mx"
-         width="680" height="414">
+
+<!--
+
+Copyright (C) 2011 Ghazi Triki <ghazi.nocturne@gmail.com>
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program. If not, see <http://www.gnu.org/licenses/>.
+
+-->
+
+<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
+    xmlns:s="library://ns.adobe.com/flex/spark"
+    xmlns:mx="library://ns.adobe.com/flex/mx"
+    xmlns:uicontrol="org.lionart.furqan.uicontrol.*"
+    width="680"
+    height="414"
+    filters="{[shadow]}">
     <fx:Script>
         <![CDATA[
             import org.lionart.furqan.conf.EmbeddedAssets;
         ]]>
     </fx:Script>
     <fx:Declarations>
-        <s:GlowFilter id="glowFilter" color="#A9BE7E" blurX="12" blurY="12" alpha="0.8" strength="3"/>
+        <s:DropShadowFilter id="shadow" distance="0" alpha="0.4"/>
+        <s:GlowFilter id="glowFilter" color="#A9BE7E" blurX="6" blurY="6" alpha="0.8" strength="3"/>
     </fx:Declarations>
     
-    <s:BitmapImage source="{EmbeddedAssets.PAPER_BACKGROUND}" filters="{[glowFilter]}" horizontalCenter="0" bottom="0"/>
+    <s:BorderContainer borderColor="white" cornerRadius="5" horizontalCenter="0" bottom="0">
+        <s:BitmapImage id="borderImage" 
+            source="{EmbeddedAssets.PAPER_BACKGROUND}" filters="{[glowFilter]}"
+            top="5" bottom="5" right="5" left="5"/>
+        <uicontrol:SuraHeader top="50" horizontalCenter="0"/>
+        <s:Scroller top="125" height="300" right="80" width="600">
+            <s:Group>
+                <s:RichText id="quranContent" lineBreak="toFit" width="600" height="300" lineHeight="45" />
+            </s:Group>
+        </s:Scroller>
+    </s:BorderContainer>
     
-    <s:RichText id="quranContent" top="60" bottom="40" right="90" left="90"/>
     
 </s:Group>
