--- a/src/main/resources/themes/standard/style/style.css
+++ b/src/main/resources/themes/standard/style/style.css
@@ -44,3 +44,8 @@ components|QuranDisplayView #quranContent
 {
     fontSize                : 18;
 }
+
+.suraName
+{
+    fontSize                : 30;
+}
