Added sura displaying by name.

--- a/src/main/flex/com/alkiteb/furqan/view/components/NavigationView.mxml
+++ b/src/main/flex/com/alkiteb/furqan/view/components/NavigationView.mxml
@@ -26,7 +26,10 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 
     <fx:Script>
         <![CDATA[
-            import mx.events.FlexEvent;
+			import mx.events.FlexEvent;
+			
+			import spark.events.IndexChangeEvent;
+
             
             [Bindable]
             public var nextButtonEnabled : Boolean;
@@ -46,7 +49,12 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                 dispatchEvent(new GetSuraEvent(GetSuraEvent.PREVIOUS_SURA));
             }
             
-        ]]>
+			protected function suwarNamesList_changeHandler(event:IndexChangeEvent):void
+			{
+				dispatchEvent(new GetSuraEvent(GetSuraEvent.SURA_BY_NAME));
+			}
+			
+		]]>
     </fx:Script>
 
     <fx:Declarations>
@@ -62,7 +70,9 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
             label="{resourceManager.getString('furqan','nextSura')}"
             click="nextButton_clickHandler(event)"
             enabled="{nextButtonEnabled}"/>
-		<s:ComboBox id="suwarNamesList" />
+		<s:Label text="أو أختار سورة" paddingRight="20"/>
+		<s:ComboBox id="suwarNamesList"
+			change="suwarNamesList_changeHandler(event)"/>
     </s:HGroup>
 
 </s:Group>
