- Sura selector ComboBox moved between previous and next buttons. - Add new skins for sura selector ComboBox to place arabic text correctly.

--- a/src/main/resources/themes/standard/style/style.css
+++ b/src/main/resources/themes/standard/style/style.css
@@ -50,6 +50,12 @@ components|QuranDisplayView #bamalahLabel
 	color                   : #333333;
 }
 
+components|NavigationView #suwarNamesList
+{
+	skinClass				: ClassReference("com.alkiteb.furqan.skins.SuraSelectorSkin");
+	fontSize                : 15;
+}
+
 .suraInfo
 {
     fontSize                : 18;
