--- a/src/main/flex/com/alkiteb/furqan/view/components/NavigationView.mxml
+++ b/src/main/flex/com/alkiteb/furqan/view/components/NavigationView.mxml
@@ -66,14 +66,13 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
             label="{resourceManager.getString('furqan','previousSura')}"
             click="previousButton_clickHandler(event)"
             enabled="{previousButtonEnabled}"/>
+		<s:ComboBox id="suwarNamesList"
+					change="suwarNamesList_changeHandler(event)"
+					width="100"/>
         <uicontrol:BaseButton id="nextButton"
             label="{resourceManager.getString('furqan','nextSura')}"
             click="nextButton_clickHandler(event)"
             enabled="{nextButtonEnabled}"/>
-		<s:Label text="{resourceManager.getString('furqan','orChoose')}"
-				 paddingRight="20"/>
-		<s:ComboBox id="suwarNamesList"
-			change="suwarNamesList_changeHandler(event)"/>
     </s:HGroup>
 
 </s:Group>
