--- a/src/main/flex/com/alkiteb/furqan/view/components/QuranDisplayView.mxml
+++ b/src/main/flex/com/alkiteb/furqan/view/components/QuranDisplayView.mxml
@@ -46,7 +46,8 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 				<s:Label id="bamalahLabel" width="100%" />
                 <s:RichEditableText id="quranContent"
                                     editable="false"
-                                    width="580"/>
+                                    width="580"
+									focusEnabled="false"/>
             </s:VGroup>
         </s:Scroller>
     </s:BorderContainer>
