Added CheckForUpdateCommand : application auto-update works correctly.

--- a/src/main/flex/com/alkiteb/furqan/skins/SuraSelectorSkin.mxml
+++ b/src/main/flex/com/alkiteb/furqan/skins/SuraSelectorSkin.mxml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
 
-ADOBE SYSTEMS INCORPORATED
-Copyright 2008 Adobe Systems Incorporated
-All Rights Reserved.
+Copyright (C) 2011 Ghazi Triki <ghazi.nocturne@gmail.com>
 
-NOTICE: Adobe permits you to use, modify, and distribute this file
-in accordance with the terms of the license agreement accompanying it.
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
 
---> 
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program. If not, see <http://www.gnu.org/licenses/>.
+
+-->
+
 <!--- The default skin class for the Spark ComboBox component. 
 The skin for the anchor button for a ComboBox component 
 is defined by the ComboBoxButtonSkin class.  The skin for the text input
