--- a/src/main/flex/Furqan.mxml
+++ b/src/main/flex/Furqan.mxml
@@ -40,11 +40,11 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
         [ResourceBundle("furqan")]
     </fx:Metadata>
     
-    <components:HeaderView id="headerView" top="0" right="0" left="0"/>
+    <components:HeaderView id="headerView"/>
     
-    <components:NavigationView id="navigationView" top="40" left="40" right="40"/>
+    <components:NavigationView id="navigationView"/>
     
-    <components:QuranDisplayView id="quranView" bottom="10" horizontalCenter="0" />
+    <components:QuranDisplayView id="quranView"/>
 
     <fx:Style source="/../resources/themes/standard/style/style.css"/>
 
