--- a/src/main/flex/com/alkiteb/furqan/skins/SuraSelectorSkin.mxml
+++ b/src/main/flex/com/alkiteb/furqan/skins/SuraSelectorSkin.mxml
@@ -218,7 +218,7 @@ is defined by the ComboBoxTextInputSkin class.
             <!--- @private -->
             <s:Scroller id="scroller" left="0" top="0" right="0" bottom="0" hasFocusableChildren="false" minViewportInset="1">
                 <!--- @copy spark.components.SkinnableDataContainer#dataGroup-->
-                <s:DataGroup id="dataGroup" itemRenderer="spark.skins.spark.DefaultItemRenderer">
+                <s:DataGroup id="dataGroup" itemRenderer="com.alkiteb.furqan.uicontrol.itemrenderer.SuraSelectorItemRenderer">
                     <s:layout>
                         <s:VerticalLayout gap="0" horizontalAlign="contentJustify" requestedMinRowCount="1" requestedMaxRowCount="6"/>
                     </s:layout>
