- Added buttons style sheet file. - Added three new action buttons to NavigationView. - Selected text color inside text components made green. - Added new icons to action buttons.

--- a/src/main/flex/Furqan.mxml
+++ b/src/main/flex/Furqan.mxml
@@ -47,5 +47,6 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
     <components:QuranDisplayView id="quranView"/>
 
     <fx:Style source="/../resources/themes/standard/style/style.css"/>
+    <fx:Style source="/../resources/themes/standard/style/buttons.css"/>
 
 </s:WindowedApplication>
